chore: add placeholder for WebView Control incl link to ms docs for how to auth navigate with the coreWebView2 control.
Will see if this is replicate able in uno as there are less Navigation commands for it

--- a/src/DevTKSS.MyManufacturerERP/Presentation/AuthPage.xaml
+++ b/src/DevTKSS.MyManufacturerERP/Presentation/AuthPage.xaml
@@ -17,7 +17,8 @@
       <RowDefinition />
     </Grid.RowDefinitions>
     <utu:NavigationBar Content="{Binding Title}" />
-
+    <!-- Here should maybe become the WebView2 Control a place https://learn.microsoft.com/de-de/microsoft-edge/webview2/concepts/basic-authentication?tabs=csharp -->
+    <!-- Planning on how I want to set up the navigation. e.g. Nested content or another page... put the button on its side would be not pretty. -->
     <StackPanel Grid.Row="1"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
